--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="BlockIQ JC — Know Every Block">
 <meta name="twitter:description" content="Free Jersey City crime data, safety scores, parks, schools and transit. No login required.">
-<link rel="canonical" href="https://remymunoz.github.io/jersey-city-crime-dashboard/landing.html">
+<link rel="canonical" href="https://remymunoz.github.io/jersey-city-crime-dashboard/">
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700&family=IBM+Plex+Mono:wght@400;500;600&display=swap" rel="stylesheet">
 <style>
 *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
@@ -435,22 +435,6 @@ h1 {
 .ticker-sep { color: var(--gray-dim); margin: 0 4px; }
 @keyframes ticker { from{transform:translateX(0)} to{transform:translateX(-50%)} }
 
-/* AD SLOT */
-.ad-slot {
-  background: rgba(255,255,255,0.015);
-  border: 1px dashed rgba(42,37,32,0.8);
-  border-radius: 2px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: rgba(138,130,120,0.3);
-  font-size: 0.65rem;
-  font-family: 'IBM Plex Mono', monospace;
-  letter-spacing: 1.5px;
-  text-transform: uppercase;
-}
-.ad-leaderboard { width: 100%; max-width: 728px; height: 90px; margin: 0 auto; }
-
 /* SECTIONS */
 .sw { padding: 100px 48px; max-width: 1200px; margin: 0 auto; }
 .sw-full { background: var(--bg2); padding: 100px 0; }
@@ -859,7 +843,7 @@ footer {
 <div class="beta-badge">BETA</div>
 
 <nav id="navbar">
-  <a href="#" class="nav-logo">BLOCK<span class="iq">IQ</span> JC<span class="dot"></span></a>
+  <a href="index.html" class="nav-logo">BLOCK<span class="iq">IQ</span> JC<span class="dot"></span></a>
   <ul class="nav-links">
     <li><a href="#features">Features</a></li>
     <li><a href="#agents">Local Agents</a></li>
