--- a/dashboard.html
+++ b/dashboard.html
@@ -458,6 +458,57 @@
   .legend-row { display:flex; align-items:center; gap:8px; margin-bottom:5px; font-size:11px; color:#e8eaed; }
   .legend-swatch { width:24px; height:8px; border-radius:2px; }
   .legend-dot { width:12px; height:12px; border-radius:50%; border:2px solid rgba(255,255,255,.4); flex-shrink:0; }
+  #ward-info-panel {
+    position: absolute;
+    left: 20px;
+    bottom: 24px;
+    z-index: 8;
+    width: 280px;
+    background: rgba(17, 19, 24, 0.97);
+    border: 1px solid #1e2229;
+    border-radius: 10px;
+    padding: 12px 14px 10px;
+    display: none;
+    box-shadow: 0 8px 24px rgba(0,0,0,0.45);
+  }
+  #ward-info-panel.is-visible { display: block; }
+  .ward-info-close {
+    position: absolute;
+    top: 6px;
+    right: 8px;
+    width: 28px;
+    height: 28px;
+    border: 0;
+    border-radius: 50%;
+    background: rgba(255,255,255,0.06);
+    color: #e8eaed;
+    font-size: 17px;
+    line-height: 1;
+    cursor: pointer;
+  }
+  .ward-info-title {
+    font-family:'Space Mono',monospace;
+    font-size: 12px;
+    color: #f4a261;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    margin: 0 26px 8px 0;
+  }
+  .ward-info-row {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 4px 0;
+    border-bottom: 1px solid #1e2229;
+    font-size: 11px;
+    color: #9ca3af;
+  }
+  .ward-info-row:last-child { border-bottom: none; }
+  .ward-info-row strong {
+    font-family:'Space Mono',monospace;
+    color: #e8eaed;
+    font-weight: 700;
+  }
   .mapboxgl-popup-content{background:#111318!important;border:1px solid #1e2229!important;border-radius:8px!important;padding:14px 16px!important;color:#e8eaed!important;font-family:'DM Sans',sans-serif!important;box-shadow:0 8px 32px rgba(0,0,0,.5)!important;min-width:220px;}
   .mapboxgl-popup-tip{display:none!important;}
   .popup-title{font-family:'Space Mono',monospace;font-size:11px;margin-bottom:10px;text-transform:uppercase;}
@@ -540,7 +591,7 @@
     opacity: 0.6;
   }
   /* ── Hide mobile elements on desktop ── */
-  .mobile-filter-pills,
+  .mobile-top-actions,
   .mobile-bottom-sheet,
   #mobile-sidebar-toggle,
   .mobile-sidebar-overlay {
@@ -581,48 +632,43 @@
       display: none !important;
     }
 
-    /* ── FILTER PILLS: horizontal scroll row at top ── */
-    .mobile-filter-pills {
+    /* ── Top actions row ── */
+    .mobile-top-actions {
       display: flex;
       position: fixed;
       top: 12px;
-      left: 12px;
       right: 12px;
       z-index: 100;
-      gap: 6px;
-      flex-wrap: nowrap;
-      overflow-x: auto;
-      scrollbar-width: none;
-      -webkit-overflow-scrolling: touch;
-      padding-bottom: 2px;
+      align-items: center;
     }
-    .mobile-filter-pills::-webkit-scrollbar { display: none; }
-
-    .pill {
+    .mobile-home-link {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
       background: rgba(6, 6, 14, 0.9);
       backdrop-filter: blur(12px);
       -webkit-backdrop-filter: blur(12px);
       border: 1px solid rgba(255, 255, 255, 0.15);
       color: #e0ddd8;
-      padding: 8px 14px;
+      text-decoration: none;
+      padding: 9px 14px;
       border-radius: 20px;
       font-size: 0.73rem;
       white-space: nowrap;
       font-family: 'DM Mono', monospace;
       letter-spacing: 0.8px;
-      cursor: pointer;
-      flex-shrink: 0;
-      transition: background 0.2s, border-color 0.2s;
+      transition: background 0.2s, border-color 0.2s, color 0.2s;
       -webkit-tap-highlight-color: transparent;
-      min-height: 36px;
+      min-height: 38px;
     }
-    .pill.active {
+    .mobile-home-link:hover,
+    .mobile-home-link:active {
       background: #E8571A;
       border-color: #E8571A;
       color: #fff;
     }
 
-    /* ── GEOCODER: below pills ── */
+    /* ── GEOCODER: below top actions ── */
     .mapboxgl-ctrl-top-right {
       position: fixed !important;
       top: 58px !important;
@@ -1118,6 +1164,14 @@
       text-decoration: none;
     }
     .sheet-source-links a:hover { text-decoration: underline; }
+
+    #ward-info-panel {
+      left: 12px;
+      right: 12px;
+      width: auto;
+      top: 112px;
+      bottom: auto;
+    }
   }
 
   @media (max-width: 1024px) {
@@ -1149,12 +1203,8 @@
 
 <!-- the old mobile-header was display:none anyway — just remove it entirely -->
 
-<div class="mobile-filter-pills">
-  <button class="pill active">All</button>
-  <button class="pill">Theft</button>
-  <button class="pill">Assault</button>
-  <button class="pill">Vehicle</button>
-  <button class="pill">Other</button>
+<div class="mobile-top-actions">
+  <a href="index.html" class="mobile-home-link">← Home</a>
 </div>
 
 <div id="sidebar">
@@ -1393,6 +1443,14 @@
 </div>
 
 <div id="map">
+  <div id="ward-info-panel" aria-live="polite">
+    <button type="button" class="ward-info-close" id="ward-info-close" aria-label="Close ward details">×</button>
+    <div class="ward-info-title" id="ward-info-title"></div>
+    <div class="ward-info-row"><span>Safety Score</span><strong id="ward-info-score"></strong></div>
+    <div class="ward-info-row"><span>2024 Incidents</span><strong id="ward-info-incidents"></strong></div>
+    <div class="ward-info-row"><span>Top Crime</span><strong id="ward-info-topcrime"></strong></div>
+    <div class="ward-info-row"><span>Council</span><strong id="ward-info-council"></strong></div>
+  </div>
   <div id="legend">
     <div class="legend-section">
       <div class="legend-section-title">Ward Density</div>
@@ -2101,6 +2159,30 @@ function isInsideJerseyCity(lng, lat) {
   });
 }
 
+function getWardFeatureAtLngLat(lng, lat) {
+  if (!Number.isFinite(lng) || !Number.isFinite(lat) || !wardsGeoJSON || !wardsGeoJSON.features) return null;
+
+  function pointInPolygonRings(rings) {
+    if (!rings || !rings.length) return false;
+    if (!isPointInRing(lng, lat, rings[0])) return false;
+    for (let i = 1; i < rings.length; i += 1) {
+      if (isPointInRing(lng, lat, rings[i])) return false;
+    }
+    return true;
+  }
+
+  for (const feature of wardsGeoJSON.features) {
+    const geom = feature && feature.geometry;
+    if (!geom) continue;
+    if (geom.type === 'Polygon' && pointInPolygonRings(geom.coordinates || [])) return feature;
+    if (geom.type === 'MultiPolygon') {
+      const matched = (geom.coordinates || []).some((poly) => pointInPolygonRings(poly || []));
+      if (matched) return feature;
+    }
+  }
+  return null;
+}
+
 /* ── MAP INIT ── */
 const map = new mapboxgl.Map({
   container:'map', style:'mapbox://styles/mapbox/standard',
@@ -2121,13 +2203,57 @@ const layerState = {
   poiParks:false
 };
 const allMarkers = [];
+let selectedWardId = null;
+const wardInfoPanelEl = document.getElementById('ward-info-panel');
+const wardInfoTitleEl = document.getElementById('ward-info-title');
+const wardInfoScoreEl = document.getElementById('ward-info-score');
+const wardInfoIncidentsEl = document.getElementById('ward-info-incidents');
+const wardInfoTopCrimeEl = document.getElementById('ward-info-topcrime');
+const wardInfoCouncilEl = document.getElementById('ward-info-council');
+const wardInfoCloseEl = document.getElementById('ward-info-close');
 
-const sheet = document.getElementById('mobileSheet');
-const handle = document.querySelector('.sheet-handle');
-if (sheet && handle) {
-  handle.addEventListener('click', () => {
-    sheet.classList.toggle('expanded');
-  });
+function clearWardSelectionVisuals() {
+  if (map.getLayer('ward-selected-outline')) {
+    map.setFilter('ward-selected-outline', ['==', ['upcase', ['get', 'ward']], '__NONE__']);
+  }
+}
+
+function hideWardInfoPanel() {
+  selectedWardId = null;
+  clearWardSelectionVisuals();
+  if (wardInfoPanelEl) wardInfoPanelEl.classList.remove('is-visible');
+}
+
+function showWardInfoPanel(wardId, councilName) {
+  const details = wardData[wardId];
+  if (!details || !wardInfoPanelEl) return;
+  const score = details.safetyScore || calculateSafetyScore(details);
+  const tier = getSafetyTier(score);
+  if (wardInfoTitleEl) wardInfoTitleEl.textContent = `Ward ${wardId} — ${details.description}`;
+  if (wardInfoScoreEl) {
+    wardInfoScoreEl.textContent = `${score} ${tier.label}`;
+    wardInfoScoreEl.style.color = safeColor(tier.color, '#e8eaed');
+  }
+  if (wardInfoIncidentsEl) wardInfoIncidentsEl.textContent = `${details.incidents}`;
+  if (wardInfoTopCrimeEl) wardInfoTopCrimeEl.textContent = details.topCrime || 'N/A';
+  if (wardInfoCouncilEl) wardInfoCouncilEl.textContent = councilName || 'N/A';
+  wardInfoPanelEl.classList.add('is-visible');
+}
+
+function setSelectedWard(wardId, councilName) {
+  if (!wardId) {
+    hideWardInfoPanel();
+    return;
+  }
+  if (selectedWardId === wardId) {
+    hideWardInfoPanel();
+    return;
+  }
+  selectedWardId = wardId;
+  if (map.getLayer('ward-selected-outline')) {
+    map.setFilter('ward-selected-outline', ['==', ['upcase', ['get', 'ward']], wardId]);
+  }
+  showWardInfoPanel(wardId, councilName);
 }
 
 function updateCommunityLegend(){
@@ -2184,6 +2310,10 @@ function safeColor(value, fallback = '#457b9d'){
   return /^#([0-9a-fA-F]{3,8})$/.test(v) ? v : fallback;
 }
 
+if (wardInfoCloseEl) {
+  wardInfoCloseEl.addEventListener('click', hideWardInfoPanel);
+}
+
 /* ── SIDEBAR: WARDS ── */
 const wardList = document.getElementById('wardList');
 [...wardsGeoJSON.features].sort((a,b)=>a.properties.ward.localeCompare(b.properties.ward)).forEach(f=>{
@@ -2210,7 +2340,12 @@ const wardList = document.getElementById('wardList');
         <div class="ward-incidents">${incidents} incidents</div>
       </div>
     </div>`;
-  el.addEventListener('click',()=>zoomToFeature(f));
+  el.addEventListener('click',()=>{
+    zoomToFeature(f);
+    const wardId = ((f.properties && f.properties.ward) || '').toUpperCase();
+    const councilName = (f.properties && f.properties.council_pe) || '';
+    setSelectedWard(wardId, councilName);
+  });
   wardList.appendChild(el);
 });
 
@@ -2264,8 +2399,11 @@ map.on('load',()=>{
   map.addLayer({id:'ward-labels',type:'symbol',source:'wards',
     layout:{'text-field':['concat','Ward ',['upcase',['get','ward']]],'text-font':['DIN Pro Bold','Arial Unicode MS Bold'],'text-size':13,'text-anchor':'center'},
     paint:{'text-color':'#ffffff','text-halo-color':'rgba(0,0,0,0.7)','text-halo-width':1.5}});
+  map.addLayer({id:'ward-selected-outline',type:'line',source:'wards',
+    filter:['==',['upcase',['get','ward']],'__NONE__'],
+    paint:{'line-color':'#F5A623','line-width':3,'line-opacity':0.95,'line-emissive-strength':1}});
   if(!layerState.wardBoundaries){
-    ['wards-fill','wards-border','ward-labels'].forEach(l=>map.setLayoutProperty(l,'visibility','none'));
+    ['wards-fill','wards-border','ward-labels','ward-selected-outline'].forEach(l=>map.setLayoutProperty(l,'visibility','none'));
   }
 
   map.addSource('crime-heatmap',{ type:'geojson', data:heatmapPointsData });
@@ -2412,6 +2550,17 @@ map.on('load',()=>{
     `).addTo(map);
   });
   map.on('mouseleave','wards-fill',()=>{ map.getCanvas().style.cursor=''; wardPopup.remove(); });
+  map.on('click',(e)=>{
+    const wardFeature = getWardFeatureAtLngLat(e.lngLat.lng, e.lngLat.lat);
+    if(!wardFeature){
+      hideWardInfoPanel();
+      return;
+    }
+    const props = wardFeature.properties || {};
+    const wardId = String(props.ward || '').toUpperCase();
+    const councilName = props.council_pe || '';
+    setSelectedWard(wardId, councilName);
+  });
 
   const schoolPopup=new mapboxgl.Popup({closeButton:false,closeOnClick:false,offset:10});
   map.on('mousemove','schools-points',e=>{
@@ -2504,7 +2653,7 @@ function zoomToFeature(f){
   map.fitBounds([[Math.min(...lngs),Math.min(...lats)],[Math.max(...lngs),Math.max(...lats)]],{padding:60,duration:800});
 }
 
-const wardBoundaryLayers=['wards-border','ward-labels'];
+const wardBoundaryLayers=['wards-border','ward-labels','ward-selected-outline'];
 const wardFillLayers=['wards-fill'];
 const distLayers=['districts-fill','districts-border','district-labels'];
 const schoolLayers=['schools-points'];
@@ -2536,6 +2685,9 @@ async function toggleLayer(group){
   if(group==='wardBoundaries'){
     wardFillLayers.forEach(l=>map.setLayoutProperty(l,'visibility',vis));
     wardBoundaryLayers.forEach(l=>map.setLayoutProperty(l,'visibility',vis));
+    if(!layerState.wardBoundaries){
+      hideWardInfoPanel();
+    }
   }
   if(group==='crimeHeatmap') heatmapLayers.forEach(l=>map.setLayoutProperty(l,'visibility',vis));
   if(group==='districts') distLayers.forEach(l=>map.setLayoutProperty(l,'visibility',vis));
@@ -2592,16 +2744,6 @@ async function toggleLayer(group){
     overlay.addEventListener('click', closeSheet);
     if (sheetHandle) sheetHandle.addEventListener('click', toggleSheet);
 
-    // ── Filter pills functionality ──
-    document.querySelectorAll('.mobile-filter-pills .pill').forEach(function(pill) {
-      pill.addEventListener('click', function() {
-        document.querySelectorAll('.mobile-filter-pills .pill').forEach(function(p) {
-          p.classList.remove('active');
-        });
-        pill.classList.add('active');
-        // TODO: wire up actual crime type filtering here
-      });
-    });
   }
 
   if (document.readyState === 'loading') {
@@ -2617,7 +2759,6 @@ async function toggleLayer(group){
 
   <div class="sheet-header-row">
     <div class="sheet-logo">BLOCK<span>IQ</span> JC</div>
-    <a href="index.html" class="sheet-back-link">← Home</a>
   </div>
 
   <div class="sheet-content">
