--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="BlockIQ JC — Know Every Block">
 <meta name="twitter:description" content="Free Jersey City crime data, safety scores, parks, schools and transit. No login required.">
-<link rel="canonical" href="https://remymunoz.github.io/jersey-city-crime-dashboard/">
+<link rel="canonical" href="https://blockiqjc.com/">
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700&family=IBM+Plex+Mono:wght@400;500;600&display=swap" rel="stylesheet">
 <style>
 *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
@@ -439,6 +439,10 @@ h1 {
 .sw { padding: 100px 48px; max-width: 1200px; margin: 0 auto; }
 .sw-full { background: var(--bg2); padding: 100px 0; }
 .sw-full .inner { max-width: 1200px; margin: 0 auto; padding: 0 48px; }
+
+/* Tighten Features -> Agents transition to avoid a large dead gap */
+#features { padding-bottom: 56px; }
+#agents { padding-top: 56px; }
 
 .section-label {
   font-size: 0.65rem;
