Update landing sections and external link rel attributes

--- a/dashboard.html
+++ b/dashboard.html
@@ -3203,9 +3203,9 @@ async function toggleLayer(group, forceVisible){
         <span>Data Sources</span><span class="sheet-accordion-arrow">+</span>
       </div>
       <div class="sheet-accordion-body sheet-source-links">
-        <a href="https://data.jerseycitynj.gov" target="_blank">JC Open Data Portal</a>
-        <a href="https://ucr.fbi.gov" target="_blank">FBI UCR 2024</a>
-        <a href="https://www.jerseycitynj.gov/cityservices/publicsafety/policeindex" target="_blank">JCPD Official Site</a>
+        <a href="https://data.jerseycitynj.gov" target="_blank" rel="noopener noreferrer">JC Open Data Portal</a>
+        <a href="https://ucr.fbi.gov" target="_blank" rel="noopener noreferrer">FBI UCR 2024</a>
+        <a href="https://www.jerseycitynj.gov/cityservices/publicsafety/policeindex" target="_blank" rel="noopener noreferrer">JCPD Official Site</a>
       </div>
     </div>
 
