--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@ footer {
     <li><a href="#agents">Local Agents</a></li>
     <li><a href="#advertise">Advertise</a></li>
     <li><a href="#contact">Contact</a></li>
-    <li><a href="dashboard.html" target="_blank" class="nav-cta">Open Dashboard ↗</a></li>
+    <li><a href="dashboard.html" target="_blank" rel="noopener noreferrer" class="nav-cta">Open Dashboard ↗</a></li>
   </ul>
 </nav>
 
@@ -984,7 +984,7 @@ footer {
     <p class="hero-sub">Jersey City's only free neighborhood intelligence dashboard — crime data, safety scores, schools, parks, transit, and more. No login. No paywall. Just open it.</p>
     <div class="free-badge">// 100% Free · No Account Required</div>
     <div class="hero-actions">
-      <a href="dashboard.html" target="_blank" class="btn-primary">🗺 Explore the Dashboard</a>
+      <a href="dashboard.html" target="_blank" rel="noopener noreferrer" class="btn-primary">🗺 Explore the Dashboard</a>
       <a href="#features" class="btn-secondary">See What's Inside ↓</a>
     </div>
   </div>
@@ -1021,17 +1021,6 @@ footer {
     <span class="ticker-item">86 PARKS VERIFIED <span class="ticker-sep">·</span></span>
     <span class="ticker-item">UPDATED QUARTERLY <span class="ticker-sep">·</span></span>
   </div>
-</div>
-
-<!-- AD SLOT -->
-<div style="padding: 28px 48px; background: var(--bg); display: flex; justify-content: center;">
-  <a href="#advertise" style="display:flex; align-items:center; justify-content:space-between; width:100%; max-width:728px; height:90px; background:rgba(232,87,26,0.06); border:1px solid rgba(232,87,26,0.2); border-radius:2px; padding: 0 32px; text-decoration:none;">
-    <div>
-      <div style="font-family:'Bebas Neue',sans-serif; font-size:1.4rem; color:#F2EDE4; letter-spacing:2px;">ADVERTISE YOUR LISTINGS HERE</div>
-      <div style="font-family:'IBM Plex Mono',monospace; font-size:0.65rem; color:#E8571A; letter-spacing:2px; margin-top:4px;">REACH JERSEY CITY HOME BUYERS · STARTING AT $50/MO</div>
-    </div>
-    <div style="font-family:'IBM Plex Mono',monospace; font-size:0.75rem; color:#E8571A; letter-spacing:1px; border:1px solid rgba(232,87,26,0.4); padding:8px 16px; border-radius:2px;">GET STARTED →</div>
-  </a>
 </div>
 
 <!-- NEIGHBORHOOD BANNER -->
@@ -1092,7 +1081,7 @@ footer {
   </div>
 </div>
 
-<!-- AGENTS -->
+<!-- AGENTS SECTION HIDDEN FOR NOW
 <div class="sw-full" id="agents">
   <div class="inner">
     <p class="section-label reveal">Local Real Estate Experts</p>
@@ -1121,6 +1110,7 @@ footer {
     </div>
   </div>
 </div>
+-->
 
 <!-- ADVERTISE -->
 <div class="sw" id="advertise">
@@ -1174,6 +1164,17 @@ footer {
   </div>
 </div>
 
+<!-- AD SLOT -->
+<div style="padding: 28px 48px; background: var(--bg); display: flex; justify-content: center;">
+  <a href="#advertise" style="display:flex; align-items:center; justify-content:space-between; width:100%; max-width:728px; height:90px; background:rgba(232,87,26,0.06); border:1px solid rgba(232,87,26,0.2); border-radius:2px; padding: 0 32px; text-decoration:none;">
+    <div>
+      <div style="font-family:'Bebas Neue',sans-serif; font-size:1.4rem; color:#F2EDE4; letter-spacing:2px;">ADVERTISE YOUR LISTINGS HERE</div>
+      <div style="font-family:'IBM Plex Mono',monospace; font-size:0.65rem; color:#E8571A; letter-spacing:2px; margin-top:4px;">REACH JERSEY CITY HOME BUYERS · STARTING AT $50/MO</div>
+    </div>
+    <div style="font-family:'IBM Plex Mono',monospace; font-size:0.75rem; color:#E8571A; letter-spacing:1px; border:1px solid rgba(232,87,26,0.4); padding:8px 16px; border-radius:2px;">GET STARTED →</div>
+  </a>
+</div>
+
 <!-- CONTACT -->
 <div class="sw" id="contact">
   <p class="section-label reveal">Get In Touch</p>
@@ -1221,7 +1222,7 @@ footer {
 <footer>
   <div class="footer-logo">BLOCK<span>IQ</span> JC</div>
   <div class="footer-links">
-    <a href="dashboard.html" target="_blank">Dashboard</a>
+    <a href="dashboard.html" target="_blank" rel="noopener noreferrer">Dashboard</a>
     <a href="#advertise">Advertise</a>
     <a href="#contact">Contact</a>
   </div>
