Refine homepage hero copy and dashboard-first CTA

--- a/index.html
+++ b/index.html
@@ -968,8 +968,8 @@ footer {
       <span class="eyebrow-line"></span>
     </div>
     <h1>
-      <span class="h1-line1">KNOW EVERY</span>
-      <span class="h1-line2">BLOCK<span class="h1-period">.</span></span>
+      <span class="h1-line1">JERSEY CITY</span>
+      <span class="h1-line2">CRIME + PLACES<span class="h1-period">.</span></span>
     </h1>
 
     <div class="ward-strip">
@@ -981,11 +981,11 @@ footer {
       <a class="ward-tag" href="dashboard.html#ward-f">Bergen-Lafayette</a>
     </div>
 
-    <p class="hero-sub">Jersey City's only free neighborhood intelligence dashboard — crime data, safety scores, schools, parks, transit, and more. No login. No paywall. Just open it.</p>
-    <div class="free-badge">// 100% Free · No Account Required</div>
+    <p class="hero-sub">A free dashboard for Jersey City residents to quickly check crime stats, schools, parks, transit, and neighborhood context — all in one place.</p>
+    <div class="free-badge">// Free · No Login Required</div>
     <div class="hero-actions">
-      <a href="dashboard.html" target="_blank" rel="noopener noreferrer" class="btn-primary">🗺 Explore the Dashboard</a>
-      <a href="#features" class="btn-secondary">See What's Inside ↓</a>
+      <a href="dashboard.html" target="_blank" rel="noopener noreferrer" class="btn-primary">Open Dashboard</a>
+      <a href="#features" class="btn-secondary">How It Works ↓</a>
     </div>
   </div>
 
